# AA-Bloque2-Practica

./: .gitignore  README.md  Red_Neuronal_Titanic_Diseño.py  pyproject.toml
clf/: Modelos_de_Clasificacion.py  Red_Neuronal_Clasificacion.py  evaluacion_modelos_clasificacion.py
reg/: Modelos_de_Regresion.py  Red_Neuronal_Regresion.py  evaluacion_modelos_regresion.py
